# kiota-rs

./: Cargo.toml  README.md
crates/kiota-abstractions/: Cargo.toml
crates/kiota-abstractions/src/: base_request_builder.rs  error.rs  headers.rs  http_method.rs  iso_duration.rs  lib.rs  multipart_body.rs  nullable.rs  request_information.rs  request_option.rs
crates/kiota-abstractions/src/authentication/: anonymous.rs  api_key.rs  base_bearer_token.rs  mod.rs
crates/kiota-abstractions/src/serialization/: mod.rs  parsable.rs  parse_node.rs  parse_node_factory.rs  registry.rs  serialization_writer.rs  serialization_writer_factory.rs
crates/kiota-abstractions/src/store/: mod.rs
crates/kiota-abstractions/src/untyped/: mod.rs
crates/kiota-authentication/: Cargo.toml
crates/kiota-authentication/src/: lib.rs
crates/kiota-bundle/: Cargo.toml
crates/kiota-bundle/src/: lib.rs
crates/kiota-http/: Cargo.toml
crates/kiota-http/src/: http_client_request_adapter.rs  kiota_client_factory.rs  lib.rs  middleware.rs  retry_handler.rs  user_agent_handler.rs
crates/kiota-serialization-form/: Cargo.toml
crates/kiota-serialization-form/src/: form_parse_node.rs  form_parse_node_factory.rs  form_serialization_writer.rs  form_serialization_writer_factory.rs  lib.rs
crates/kiota-serialization-json/: Cargo.toml
crates/kiota-serialization-json/src/: json_parse_node.rs  json_parse_node_factory.rs  json_serialization_writer.rs  json_serialization_writer_factory.rs  lib.rs
crates/kiota-serialization-multipart/: Cargo.toml
crates/kiota-serialization-multipart/src/: lib.rs  multipart_serialization_writer.rs  multipart_serialization_writer_factory.rs
crates/kiota-serialization-text/: Cargo.toml
crates/kiota-serialization-text/src/: lib.rs  text_parse_node.rs  text_parse_node_factory.rs  text_serialization_writer.rs  text_serialization_writer_factory.rs
examples/github-releases/: Cargo.toml
examples/github-releases/examples/: get_release.rs
examples/github-releases/src/: git_hub_releases_client.rs  kiota-lock.json  lib.rs
examples/github-releases/src/models/: error.rs  mod.rs  release.rs
examples/github-releases/src/repos/: mod.rs  repos_request_builder.rs
examples/github-releases/src/repos/item/: mod.rs  with_owner_item_request_builder.rs
examples/github-releases/src/repos/item/item/: mod.rs  with_repo_item_request_builder.rs
examples/github-releases/src/repos/item/item/releases/: mod.rs  releases_request_builder.rs
examples/github-releases/src/repos/item/item/releases/item/: mod.rs  with_release_name_item_request_builder.rs
examples/petstore/: Cargo.toml
examples/petstore/examples/: get_pets.rs
examples/petstore/src/: kiota-lock.json  lib.rs  petstore_client.rs
examples/petstore/src/models/: api_response.rs  category.rs  mod.rs  order.rs  order_status.rs  pet.rs  pet_status.rs  tag.rs  user.rs
examples/petstore/src/pet/: mod.rs  pet_request_builder.rs
examples/petstore/src/pet/find_by_status/: find_by_status_request_builder.rs  get_status_query_parameter_type.rs  mod.rs
examples/petstore/src/pet/find_by_tags/: find_by_tags_request_builder.rs  mod.rs
examples/petstore/src/pet/item/: mod.rs  with_pet_item_request_builder.rs  with_pet_post_request_body.rs
examples/petstore/src/pet/item/upload_image/: mod.rs  upload_image_request_builder.rs
examples/petstore/src/store/: mod.rs  store_request_builder.rs
examples/petstore/src/store/inventory/: inventory_get_response.rs  inventory_request_builder.rs  mod.rs
examples/petstore/src/store/order/: mod.rs  order_request_builder.rs
examples/petstore/src/store/order/item/: mod.rs  with_order_item_request_builder.rs
examples/petstore/src/user/: mod.rs  user_request_builder.rs
examples/petstore/src/user/create_with_array/: create_with_array_request_builder.rs  mod.rs
examples/petstore/src/user/create_with_list/: create_with_list_request_builder.rs  mod.rs
examples/petstore/src/user/item/: mod.rs  with_username_item_request_builder.rs
examples/petstore/src/user/login/: login_request_builder.rs  mod.rs
examples/petstore/src/user/logout/: logout_request_builder.rs  mod.rs
examples/posts/: Cargo.toml
examples/posts/examples/: get_posts.rs
examples/posts/src/: kiota-lock.json  lib.rs  posts_client.rs
examples/posts/src/models/: post.rs
examples/posts/src/posts/: posts_request_builder.rs
examples/posts/src/posts/item/: post_item_request_builder.rs
