[workspace]
resolver = "2"
members = [
    "examples/posts",
    "examples/petstore",
    "examples/github-releases",
    "crates/kiota-abstractions",
    "crates/kiota-http",
    "crates/kiota-serialization-json",
    "crates/kiota-serialization-form",
    "crates/kiota-serialization-text",
    "crates/kiota-serialization-multipart",
    "crates/kiota-authentication",
    "crates/kiota-bundle",
]

[workspace.dependencies]
kiota-abstractions = { path = "crates/kiota-abstractions" }
kiota-http = { path = "crates/kiota-http" }
kiota-serialization-json = { path = "crates/kiota-serialization-json" }
kiota-serialization-form = { path = "crates/kiota-serialization-form" }
kiota-serialization-text = { path = "crates/kiota-serialization-text" }
kiota-serialization-multipart = { path = "crates/kiota-serialization-multipart" }
kiota-authentication = { path = "crates/kiota-authentication" }
kiota-bundle = { path = "crates/kiota-bundle" }

async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
http = "1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
