[package]
name = "kiota-http"
version = "0.1.0"
edition = "2021"
description = "HTTP request adapter for Kiota-generated Rust API clients"
license = "MIT"

[dependencies]
kiota-abstractions = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
