[package]
name = "github-releases-client"
version = "0.1.0"
edition = "2021"

[dependencies]
kiota-abstractions = { path = "../../crates/kiota-abstractions" }
kiota-http = { path = "../../crates/kiota-http" }
kiota-serialization-json = { path = "../../crates/kiota-serialization-json" }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "get_release"
path = "examples/get_release.rs"
